--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description": "Challenge Chapter 6",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app/index.ts",
+    "dev": "nodemon app/index.ts",
+    "build": "tsc -p .",
+    "lint": "tslint -c tslint.json -p tsconfig.json --fix",
+    "migrate:make": "knex migrate:make",
+    "migrate:latest": "knex migrate:latest",
+    "seed:make": "knex seed:make",
+    "seed:run": "knex seed:run"
   },
   "repository": {
     "type": "git",
