--- a/package.json
+++ b/package.json
@@ -36,12 +36,16 @@
     "multer": "^1.4.5-lts.1",
     "objection": "^3.1.4",
     "path": "^0.12.7",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
     "@types/pg": "^8.11.6",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^9.0.8",
     "nodemon": "^2.0.15",
     "ts-node": "^10.9.2",
