--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/wahyupambudi/24001160-snyrgy7-wahyupambudi-bcr-ch6#readme",
   "dependencies": {
     "@types/multer": "^1.4.11",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "cloudinary": "^2.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.17.3",
