--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "path": "^0.12.7",
     "pg": "^8.7.3",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -47,6 +48,7 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^9.0.8",
+    "@types/yamljs": "^0.2.34",
     "nodemon": "^2.0.15",
     "ts-node": "^10.9.2",
     "tslint": "^6.1.3",
