--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ API_SECRET = YourAPISecret
 DATABASE = databaseName
 USER = userDatabase
 PASSWORD = password
+
+# AUTH
+SECRET_KEY = secret
+JWT_SIGNATURE_KEY = 10
