--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.17.3",
     "jsonwebtoken": "^9.0.2",
@@ -42,6 +43,7 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
     "@types/pg": "^8.11.6",
